deployment/k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0  # Use MySQL 8.0 image
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Headless service for direct communication with the pod


# kubectl create secret generic mysql-secret \
# --from-literal=mysql-root-password=db_password \
# --from-literal=mysql-database=ubereats_db \
# --from-literal=mysql-user=your-db_user \
# --from-literal=mysql-password=db_password
